# poly-bot

./: .env.example  .gitignore  CLAUDE.md  config.yaml  implementation.md  main.py  plan.md  poly-maker-structure.md  polymarket_api_learnings.md  pyproject.toml  runner.vbs  test_connection.py
.claude/: settings.json
.claude/skills/: update-docs.md
.claude/skills/update-docs/: SKILL.md
config.backups/: config-20260411T184355Z.yaml  config-20260411T184441Z.yaml
core/: book_sweep.py  engine.py  executor.py  models.py  polymarket_client.py  position_tracker.py  risk_manager.py  signal.py  sportsbook_signal.py  state.py  utils.py
markets/: base.py  fair_value.py  futures_plugin.py
markets/configs/: nhl_stanley_cup.yaml
markets/nhl_stanley_cup/: config.yaml  fair_value.py  plugin.py
neg-risk-adapter/: convert_positions.py  neg-risk-notes.md
notes/: LEARNINGS.md  implementation.md  old_plan.md  ph_1_implementation.md  ph_2_implementation.md  ph_3_implementation.md  plan.md  polymarket_api_learnings.md  polymarket_markets.md
runner/: README.md  dashboard.py  service.py
scrapers/: base.py  csv_scraper.py  models.py  stub_scraper.py
tests/: test_book_sweep.py  test_config.py  test_csv_scraper.py  test_engine.py  test_executor.py  test_fair_value.py  test_futures_plugin.py  test_position_tracker.py  test_risk_manager.py  test_signal.py  test_sportsbook_signal.py  test_state.py
